# flow-matching-and-diffusion

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  plot_brownian_motion.py  pyproject.toml  test_train.py  viz_brownian_motion.py
animations/: dynamics.py  viz_brownian_motion.py  viz_compare_sigma.py
plots/: brownian_motion.py  conditional_vector_field.py  conditional_vector_field_test.py  dynamics.py  ground_truth_conditional_prob_path.py  learned_vector_field.py  plot_utils.py  visualize_densities.py
src/: __init__.py
src/diff_eqn/: ode.py
src/distributions/: base.py  gaussian.py  gaussian_conditional_prob_path.py
src/equations/: conditional_vector_field_ode.py  conditional_vector_field_sde.py  learned_vector_field_ode.py  sde.py
src/integrators/: base.py  euler.py  euler_maruyama.py
src/processes/: brownian.py  langevin.py  ornstein_uhlenbeck.py
src/simulator/: euler.py  euler_maruyama.py
src/utils/: animation.py  animation_2d.py  general.py  plot.py  tui.py
src/vector_field/: conditional_flow_matching.py  mlp.py  trainer.py
