[project]
name = "flow-matching-and-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pyglet>=2.1.13",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pyrefly>=0.57.1",
]
