[project]
name = "flow-matching-and-diffusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pydocstringformatter>=0.7.5",
    "pyglet>=2.1.13",
    "pytest>=9.0.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pydocstyle]
convention = "numpy"

[dependency-groups]
dev = [
    "pyrefly>=0.57.1",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "tests/",
]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "PL"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pydocstringformatter]
write = true
exclude = ["**/tests/**"]
